# FastSync

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  config.toml  fast_sync.py  logging_config.py  pyproject.toml  pytest.toml  ruff.toml
.github/workflows/: main.yml  release.yml
cli/: __init__.py  main.py
cli/groups/: missing.py  sync.py
cli/utils/: __init__.py  custom_help.py  error_output.py  line_wrapper.py  progressbar.py  support_commands.py  view_files.py
cli/utils/custom_help/: __init__.py  custom_help.py  examples.py
cli/utils/output_formaters/: errors.py  formaters.py  output_formater.py
fast_sync/: __init__.py  config_worker.py  configures.py  containers.py  diff_folder.py  equal_resolver.py  folder_sync.py  hash_content_folder.py  main.py  sync_manager.py
fast_sync/cli/: __init__.py  commands.py  main.py
fast_sync/cli/groups/: cache.py  config.py  dublicates.py  duplicates.py  missing.py  sync.py
fast_sync/cli/utils/: __init__.py  constant.py  custom_config_option.py  decorators.py  default_config_creation.py  error_handling.py  error_output.py  errors.py  line_wrapper.py  progressbar.py  support_commands.py
fast_sync/cli/utils/custom_group/: __init__.py  custom_group.py  custom_theme.py  examples.py
fast_sync/cli/utils/custom_help/: custom_help.py
fast_sync/cli/utils/error/: error_handling.py  error_output.py  errors.py
fast_sync/cli/utils/output_formaters/: formaters.py  output_formater.py
fast_sync/containers/: duplicate_resolver_container.py  equal_resolver_container.py  hash_container.py  main_container.py  progressbar_container.py  reader_container.py
fast_sync/duplicate_resolver/: duplicate_filtering.py  duplicate_finder.py  duplicate_resolver.py
fast_sync/duplicate_resolver/duplicate_questions/: base.py  main_question.py  questions.py
fast_sync/folder_reader/: __init__.py  base.py  folder_reader.py
fast_sync/folder_reader/folder_filter_reader/: __init__.py  base.py  filters.py  filters_manager.py  folder_filter_reader.py
fast_sync/hash_content_folder/: __init__.py  hash_content_folder.py
fast_sync/hash_content_folder/hash_content_folder_caching/: cache_folder_creation.py  hash_content_folder_caching.py
fast_sync/utils/: constant.py  custom_repr.py  error.py  errors.py  logging_config.py  num_process.py  path_setup.py  progressbar.py  types.py
relnotes/: v0.1.0-alpha.md
tests/: conftest.py  test_cache_folder_creation.py  test_cli.py  test_duplicate_resolver.py  test_equal_resolver.py  test_fast_sync.py  test_filter_folder_reader.py  test_hash_content_folder_caching.py  test_path_setup.py  test_progressbar_fast_sync.py  test_sync_manager.py
tests/fixtures/: __init__.py  fixtures.py  fixtures_folder.py  fixtures_folder_content.py  fixtures_folder_creation.py  fixtures_folder_filled.py
tests/fixtures/test_folders/OneFileAnotherContent/yaml/: invalid_yaml.yaml
