[project]
name = "fastsync"
version = "0.1.0"
description = "CLI for syncing two folders"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "click-extra>=7.4.0",
    "loguru>=0.7.3",
    "tqdm>=4.67.1",
]

[project.scripts]
fs = "cli.main:fast_sync_cli"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-datafiles>=3.0.1",
    "pytest-unordered>=0.7.0",
    "ruff>=0.14.13",
]

[build-system]
requires = ["uv_build >= 0.9.26, <0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "fast_sync"
module-root = ""
